# site-fit-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: site-fit-workflow
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN_3D_BONSAI_INTEGRATION.md
docs/completed-plans/: workflow-hardening-plan.md
rulesets/: default.yaml
schemas/: spatial_contract_v1.json
src/: __init__.py  pipeline.py  response_filters.py  server.py
src/contract/: __init__.py  validator.py
src/export/: __init__.py  dxf.py  geojson.py  pack.py  pdf_report.py  pdf_reportlab.py  quantities.py  svg.py
src/geometry/: __init__.py  clearance.py  containment.py  polygon_ops.py
src/hazards/: __init__.py  nfpa820_zones.py
src/loaders/: __init__.py  gis_loader.py
src/models/: __init__.py  rules.py  site.py  solution.py  structures.py  topology.py
src/roads/: __init__.py  dock_zones.py  network.py  pathfinder.py  turning_radius.py
src/rules/: __init__.py  loader.py
src/rulesets/: default.yaml
src/solver/: __init__.py  cpsat_placer.py  diversity.py  grid_candidates.py  solution_pool.py
src/tools/: __init__.py  sitefit_tools.py
src/topology/: __init__.py  graph_analysis.py  placement_hints.py  sfiles_parser.py
static/: app.js  index.html  styles.css
tests/: __init__.py  test_cpsat_rotation.py  test_grid_candidates.py  test_hazard_zones_footprint.py  test_integration.py  test_per_structure_turning_radius.py  test_pinned_placements.py  test_turning_radius.py
